2006-09-27  Matt Rice <ratmice@yahoo.com>
	
	* GSSkipMutableArray.[hm]: New NSMutableArray subclass. 
	* GSIndexedSkipList.[hm]: Underlying C implementation.

2006-06-07 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.h:
	* GSCache.m:
	New convenience method to cache an item until a date.

2006-01-11  Nicola Pero <nicola@brainstorm.co.uk>

	* GNUmakefile.wrapper.objc.preamble: New file that fixes the
	"/usr/bin/ld: cannot find -lPerformance" error when linking Java
	wrappers.

2005-10-28 Richard Frith-Macdonald  <rfm@gnu.org>

	New Performance library (0.1) 