@@ -21,43 +21,76 @@
    Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111 USA.
    */
 
-#include "GSSkipMutableArray.h"
 #include <Foundation/NSException.h>
 #include <Foundation/NSValue.h>
 #include <Foundation/NSEnumerator.h>
 
-@interface SkipMutableArray(Private)
+#include "GSSkipMutableArray.h"
+#include "GSIndexedSkipList.h"
+
+static Class	abstractClass = 0;
+static Class	concreteClass = 0;
+
+@interface GSConcreteSkipArray : GSSkipMutableArray
+{
+  GSISList l;
+}
 - (GSISList) _list;
 @end
 
-@implementation SkipMutableArray(Private)
-- (GSISList) _list
+@implementation	NSMutableArray (GSSkipMutableArray)
++ (GSSkipMutableArray*) skipArray
 {
-  return l;
+  return [GSSkipMutableArray array];
 }
 @end
 
-@interface SkipMutableArrayEnumerator : NSEnumerator
+@implementation	GSSkipMutableArray
++ (id) allocWithZone: (NSZone*)z
+{
+  if (self == abstractClass)
+    {
+      return [concreteClass allocWithZone: z];
+    }
+  return [super allocWithZone: z];
+}
+
++ (void) initialize
+{
+  if (abstractClass == 0)
+    {
+      abstractClass = [GSSkipMutableArray class];
+      concreteClass = [GSConcreteSkipArray class];
+    }
+}
+
+@end
+
+
+@interface GSConcreteSkipArrayEnumerator : NSEnumerator
 {
   GSISLNode node;  
 }
 @end
 
-@implementation SkipMutableArrayEnumerator
-- (id) initWithArray:(NSArray *)arr
+@implementation GSConcreteSkipArrayEnumerator
+- (id) initWithArray: (NSArray *)arr
 {
-  if (![arr isKindOfClass:[SkipMutableArray class]])
-  {
-    [[NSException exceptionWithName:NSInternalInconsistencyException reason:@"not a SkipMutableArray" userInfo:nil] raise];
-  }
+  if (![arr isKindOfClass: [GSConcreteSkipArray class]])
+    {
+      [[NSException exceptionWithName: NSInternalInconsistencyException
+			       reason: @"not a GSConcreteSkipArray"
+			     userInfo: nil] raise];
+    }
   self = [super init];
-  node = [(SkipMutableArray *)arr _list]->header->forward[0].next;
+  node = [(GSConcreteSkipArray *)arr _list]->header->forward[0].next;
   return self;
 }
 
 - (id) nextObject
 {
   id foo = node->value;
+
   if (node == GSISLNil)
     return nil;
   node = node->forward[0].next;
@@ -65,7 +98,13 @@
 }
 @end
 
-@implementation SkipMutableArray : NSMutableArray
+@implementation GSConcreteSkipArray
+
+- (GSISList) _list
+{
+  return l;
+}
+
 - (void) _raiseRangeExceptionWithIndex: (unsigned)index from: (SEL)sel
 {
   NSDictionary *info;
@@ -90,8 +129,7 @@
   GSISLInitialize();
 }
 
-
-- (id) initWithObjects:(id *)objects count:(unsigned) count
+- (id) initWithObjects: (id *)objects count: (unsigned) count
 {
   int i;
   self = [super init];
@@ -101,9 +139,9 @@
   l = GSISLInitList([self zone]);
   
   for (i = 0; i < count; i++)
-  {
-    GSISLInsertItemAtIndex(l, RETAIN(objects[i]), i);
-  }
+    {
+      GSISLInsertItemAtIndex(l, RETAIN(objects[i]), i);
+    }
   
   return self;
 }
@@ -132,9 +170,10 @@
     } while (p != GSISLNil);
   NSZoneFree(l->zone, l->header); 
   NSZoneFree(l->zone, l);
+  [super dealloc];
 }
 
-- (void) insertObject:(id)object atIndex:(unsigned)index
+- (void) insertObject: (id)object atIndex: (unsigned)index
 {
   if (index > l->count)
     {
@@ -144,7 +183,7 @@
   GSISLInsertItemAtIndex(l, RETAIN(object), index);
 }
 
-- (id) objectAtIndex:(unsigned)index
+- (id) objectAtIndex: (unsigned)index
 {
   if (index >= l->count)
     {
@@ -154,7 +193,7 @@
   return GSISLItemAtIndex(l, index);
 }
 
-- (void) removeObjectAtIndex:(unsigned) index
+- (void) removeObjectAtIndex: (unsigned) index
 {
   if (index >= l->count)
     {
@@ -164,7 +203,7 @@
   RELEASE(GSISLRemoveItemAtIndex(l, index)); 
 }
 
-- (void) addObject:(id)obj
+- (void) addObject: (id)obj
 {
   GSISLInsertItemAtIndex(l, RETAIN(obj), l->count);
 }
@@ -174,7 +213,7 @@
   return l->count;
 }
 
-- (void) replaceObjectAtIndex:(unsigned)index withObject:(id)obj
+- (void) replaceObjectAtIndex: (unsigned)index withObject: (id)obj
 {
   RELEASE(GSISLReplaceItemAtIndex(l, RETAIN(obj), index));
 }
@@ -183,50 +222,77 @@
 {
   id    e;
 
-  e = [SkipMutableArrayEnumerator allocWithZone: NSDefaultMallocZone()];
+  e = [GSConcreteSkipArrayEnumerator
+    allocWithZone: NSDefaultMallocZone()];
   e = [e initWithArray: self];
   return AUTORELEASE(e);
 }
+
 /* returns an in an NSString suitable for running through graphviz,
  * with the graph named 'graphName' 
  */
-- (NSString *) _makeGraphOfInternalLayoutNamed:(NSString *)graphName
+- (NSString *) _makeGraphOfInternalLayoutNamed: (NSString *)graphName
 {
   GSISLNode p;
   unsigned k, i;
+  NSMutableDictionary *values;
+  NSMutableArray *edges;
+  NSMutableString *graph;
+  NSArray *tmp;
   
   p = l->header;
   k = l->level;
-  NSMutableString *graph = [[NSMutableString alloc] init];
-  [graph appendString:[NSString stringWithFormat:@"digraph %@ {\n", graphName]];
-  [graph appendString:@"graph [rankdir = LR];\n"];
-  [graph appendString:@"node [shape = record];\n"];
-  NSMutableDictionary *values = [[NSMutableDictionary alloc] init];
-  NSMutableArray *edges = [[NSMutableArray alloc] init];
-  NSArray *tmp;
-  [values setObject:[NSMutableString stringWithFormat:@"\"%p\" [label = \"%p (NIL) |{ <delta0> 0 | <forward0> }",GSISLNil, GSISLNil] forKey:[NSString stringWithFormat:@"%p", GSISLNil]];
+
+  [graph appendString:
+    [NSString stringWithFormat: @"digraph %@ {\n", graphName]];
+  [graph appendString: @"graph [rankdir = LR];\n"];
+  [graph appendString: @"node [shape = record];\n"];
+  values = [[NSMutableDictionary alloc] init];
+  edges = [[NSMutableArray alloc] init];
+  [values setObject:
+    [NSMutableString stringWithFormat:
+      @"\"%p\" [label = \"%p (NIL) |{ <delta0> 0 | <forward0> }",
+      GSISLNil, GSISLNil]
+    forKey: [NSString stringWithFormat: @"%p", GSISLNil]];
   for (k = 0; k < l->level + 1; k++)
     {
       for (p = l->header; p != GSISLNil; p = p->forward[k].next)
         {
-	  NSString *value = [NSString stringWithFormat:@"%p", p];
-	  NSMutableString *foo = [values objectForKey:value];
+	  NSString	*value;
+	  NSMutableString *foo;
 	  
+	  value = [NSString stringWithFormat: @"%p", p];
+	  foo = [values objectForKey: value];
 	  if (foo == nil)
 	    {
 	      foo = [[NSMutableString alloc] init];
-	      [foo appendString:[NSString stringWithFormat:@"\"%p\" [label = \"%p%@ |{ <delta%i> %i | <forward%i> }", p, p, p == l->header ? @"(HEADER)" : @"", k, p->forward[k].delta, k]];
+	      [foo appendString:
+		[NSString stringWithFormat:
+		  @"\"%p\" [label = \"%p%@ |{ <delta%i> %i | <forward%i> }",
+		  p, p, p == l->header ? @"(HEADER)" : @"", k,
+		  p->forward[k].delta, k]];
 	      if (p != GSISLNil)
-	        [edges addObject:[NSString stringWithFormat:@"\"%p\":forward%i -> \"%p\":delta%i;\n",p,k, p->forward[k].next,p->forward[k].next == GSISLNil ? 0 : k]];
-	      [values setObject:foo forKey:value];
+	        [edges addObject:
+		  [NSString stringWithFormat:
+		    @"\"%p\": forward%i -> \"%p\": delta%i;\n",
+		    p, k, p->forward[k].next,
+		    p->forward[k].next == GSISLNil ? 0 : k]];
+	      [values setObject: foo forKey: value];
 	      RELEASE(foo);
 	    }
 	  else
 	    {
-	      [foo appendString:[NSString stringWithFormat:@"|{ <delta%i> %i | <forward%i> }", k, p->forward[k].delta, k]];
+	      [foo appendString:
+		[NSString stringWithFormat:
+		  @"|{ <delta%i> %i | <forward%i> }",
+		  k, p->forward[k].delta, k]];
 	      if (p != GSISLNil)
-	        [edges addObject:[NSString stringWithFormat:@"\"%p\":forward%i -> \"%p\":delta%i;\n",p,k, p->forward[k].next, p->forward[k].next == GSISLNil ? 0 : k]];
-	      [values setObject:foo forKey:value];
+	        [edges addObject:
+		  [NSString stringWithFormat:
+		    @"\"%p\": forward%i -> \"%p\": delta%i;\n",
+		    p, k, p->forward[k].next,
+		    p->forward[k].next == GSISLNil ? 0 : k]];
+	      [values setObject: foo forKey: value];
 	    }
 	}
     }
@@ -234,18 +300,17 @@
   tmp = [values allKeys];
   for (i = 0; i < [tmp count]; i++)
     {
-      [graph appendString:[values objectForKey:[tmp objectAtIndex:i]]];
-      [graph appendString:@"\"];\n"];
+      [graph appendString: [values objectForKey: [tmp objectAtIndex: i]]];
+      [graph appendString: @"\"];\n"];
     }
   for (i = 0; i < [edges count]; i++)
     {
-      [graph appendString:[edges objectAtIndex:i]];
+      [graph appendString: [edges objectAtIndex: i]];
     }
-  [graph appendString:@"}\n"];
+  [graph appendString: @"}\n"];
   RELEASE(values);
   RELEASE(edges);
   return AUTORELEASE(graph);
 }
-
 
 @end
