@@ -1,3 +1,14 @@
+2006-09-27  Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* GNUmakefile:
+	* GSIndexedSkipList.m:
+	* GSSkipMutableArray.h:
+	* GSSkipMutableArray.m:
+	Minor fix to (hopefully) build on windows.
+	Hide implementation details.
+	Add convenience method (to create skiplist) to NSMutableArray.
+	Some reformatting for coding standards.
+
 2006-09-27  Matt Rice <ratmice@yahoo.com>
 	
 	* GSSkipMutableArray.[hm]: New NSMutableArray subclass. 
